--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ cmake_minimum_required(VERSION 2.8)
 project(xlarig)
 
 option(WITH_LIBCPUID        "Enable libcpuid support" ON)
-option(WITH_HWLOC           "Enable hwloc support" OFF)
-option(WITH_CN_LITE         "Enable CryptoNight-Lite algorithms family" OFF)
-option(WITH_CN_HEAVY        "Enable CryptoNight-Heavy algorithms family" OFF)
-option(WITH_CN_PICO         "Enable CryptoNight-Pico algorithm" OFF)
-option(WITH_CN_GPU          "Enable CryptoNight-GPU algorithm" OFF)
+option(WITH_HWLOC           "Enable hwloc support" ON)
+option(WITH_CN_LITE         "Enable CryptoNight-Lite algorithms family" ON)
+option(WITH_CN_HEAVY        "Enable CryptoNight-Heavy algorithms family" ON)
+option(WITH_CN_PICO         "Enable CryptoNight-Pico algorithm" ON)
+option(WITH_CN_GPU          "Enable CryptoNight-GPU algorithm" ON)
 option(WITH_RANDOMX         "Enable RandomX algorithms family" ON)
 option(WITH_ARGON2          "Enable Argon2 algorithms family" ON)
 option(WITH_HTTP            "Enable HTTP protocol support (client/server)" ON)
@@ -16,9 +16,10 @@ option(WITH_ASM             "Enable ASM PoW implementations" ON)
 option(WITH_MSR             "Enable MSR mod & 1st-gen Ryzen fix" ON)
 option(WITH_ENV_VARS        "Enable environment variables support in config file" ON)
 option(WITH_EMBEDDED_CONFIG "Enable internal embedded JSON config" OFF)
-option(WITH_OPENCL          "Enable OpenCL backend" OFF)
-option(WITH_CUDA            "Enable CUDA backend" OFF)
-option(WITH_NVML            "Enable NVML (NVIDIA Management Library) support (only if CUDA backend enabled)" OFF)
+option(WITH_OPENCL          "Enable OpenCL backend" ON)
+option(WITH_CUDA            "Enable CUDA backend" ON)
+option(WITH_NVML            "Enable NVML (NVIDIA Management Library) support (only if CUDA backend enabled)" ON)
+option(WITH_ADL             "Enable ADL (AMD Display Library) or sysfs support (only if OpenCL backend enabled)" ON)
 option(WITH_STRICT_CACHE    "Enable strict checks for OpenCL cache" ON)
 option(WITH_INTERLEAVE_DEBUG_LOG "Enable debug log for threads interleave" OFF)
 
